correction letter-spacing footer + ajout LinkedIn + suppression rsxScx footer + création de class pour éléments liés au JS

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,6 @@ p {
 span {
   color: #00A208;
 }
-
 a {
   font-family: 'Poiret One', cursive;
 }
@@ -88,10 +87,14 @@ header {
   height: 675px;
   color: white;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   border-bottom: 2px solid #00A208;
   color: #E0E0E0;
+}
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 #prenom {
   margin-bottom: 0;
@@ -168,7 +171,6 @@ header {
   justify-content: space-around;
   padding-top: 50px;
 }
-
 .expPro {
   background-color: #080808;
   height: 150px;
@@ -319,7 +321,6 @@ header {
   justify-content: space-around;
   align-items: center;
 }
-
 .titreStudy {
   color: #E0E0E0;
   height: 60px;
@@ -327,13 +328,10 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-
 }
-
 .level {
   margin-bottom: 20px;
 }
-
 .level p {
   font-family: 'Megrim', cursive;
   font-size: 25px;
@@ -343,7 +341,6 @@ header {
 /* ==========================================================================
       END study
       ========================================================================== */
-
 
 
 /* ==========================================================================
@@ -358,12 +355,10 @@ header {
   justify-content: space-around;
   align-items: center;
 }
-
 .loisirs h4 {
   padding-top: 50px;
   color: #E0E0E0;
 }
-
 .artLoisirs {
   display: flex;
   flex-direction: column;
@@ -372,7 +367,6 @@ header {
   color: #E0E0E0;
   width: 100%;
 }
-
 .iconLoisirs {
   display: flex;
   justify-content: space-around;
@@ -381,7 +375,6 @@ header {
   padding-top: 25px;
   padding-bottom: 50px;
 }
-
 .icon1 {
   background: url(../images/extNB.png) no-repeat;
   background-position: center;
@@ -391,7 +384,6 @@ header {
   align-items: center;
   cursor: pointer;
 }
-
 .icon1:hover {
   background: url(../images/extVB.png) no-repeat;
   background-position: center;
@@ -399,7 +391,6 @@ header {
   width: 88px;
   height: 150px;
 }
-
 .icon2 {
   background: url(../images/gameNB.png) no-repeat;
   background-position: center;
@@ -408,7 +399,6 @@ header {
   height: 150px;
   cursor: pointer;
 }
-
 .icon2:hover {
   background: url(../images/gameVB.png) no-repeat;
   background-position: center;
@@ -416,7 +406,6 @@ header {
   width: 88px;
   height: 150px;
 }
-
 .icon3 {
   background: url(../images/pcNB.png) no-repeat;
   background-position: center;
@@ -425,7 +414,6 @@ header {
   height: 150px;
   cursor: pointer;
 }
-
 .icon3:hover {
   background: url(../images/pcVB.png) no-repeat;
   background-position: center;
@@ -433,7 +421,6 @@ header {
   width: 88px;
   height: 150px;
 }
-
 .icon4 {
   background: url(../images/friendsNB.png) no-repeat;
   background-position: center;
@@ -442,7 +429,6 @@ header {
   height: 150px;
   cursor: pointer;
 }
-
 .icon4:hover {
   background: url(../images/friendsVB.png) no-repeat;
   background-position: center;
@@ -450,7 +436,6 @@ header {
   width: 88px;
   height: 150px;
 }
-
 .icon5 {
   background: url(../images/globeNB.png) no-repeat;
   background-position: center;
@@ -459,7 +444,6 @@ header {
   height: 150px;
   cursor: pointer;
 }
-
 .icon5:hover {
   background: url(../images/globeVB.png) no-repeat;
   background-position: center;
@@ -467,7 +451,6 @@ header {
   width: 88px;
   height: 150px;
 }
-
 .icon6 {
   background: url(../images/cineNB.png) no-repeat;
   background-position: center;
@@ -476,7 +459,6 @@ header {
   height: 150px;
   cursor: pointer;
 }
-
 .icon6:hover {
   background: url(../images/cineVB.png) no-repeat;
   background-position: center;
@@ -488,7 +470,6 @@ header {
 /* ==========================================================================
    END loisirs
    ========================================================================== */
-
 
 
 /* ==========================================================================
@@ -505,7 +486,6 @@ header {
   justify-content: space-around;
   padding-top: 50px;
 }
-
 .contact {
   height: 650px;
   background-color: #111;
@@ -514,36 +494,29 @@ header {
   justify-content: space-around;
   align-items: center;
 }
-
 .formContact {
   width: 40%;
 }
-
 form {
   display: flex;
   flex-direction: column;
 }
-
 label {
   text-align: left;
   margin: 10px;
   margin-top: 20px;
 }
-
 input {
   width: 70%;
   height: 25px;
   font-family: Arial, sans-serif;
 }
-
 input:focus {
   color: #00A208;
 }
-
 textarea {
   font-family: Arial;
 }
-
 .button {
   width: 30%;
   height: 50px;
@@ -555,41 +528,34 @@ textarea {
   font-weight: bold;
   font-size: 18px;
 }
-
 .button:hover {
   color: #E0E0E0;
   background-color: #00A208;
 }
-
 .telMail {
   width: 30%;
   display: flex;
   flex-direction: column;
   text-align: left;
 }
-
 .telMail h5 {
   margin-bottom: 20px;
   text-align: center;
 }
-
 .titreRsx {
   margin-top: 130px;
   margin-bottom: 20px;
   text-align: center;
 }
-
 .telMail p {
   margin-top: 20px;
 }
-
 .telMail a {
   margin-top: 30px;
   color: #E0E0E0;
   text-decoration: none;
   font-size: 20px;
 }
-
 .telMail a:hover {
   color: #00A208;
 }
@@ -597,7 +563,6 @@ textarea {
 /* ==========================================================================
    END contact
    ========================================================================== */
-
 
 
 /* ==========================================================================
@@ -613,35 +578,29 @@ footer {
   align-items: center;
   border-top: 2px solid #00A208;
 }
-
 .copyR {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-
 .copyright {
   /*display: flex;
   justify-content: center;*/
   margin-left: 40px;
 }
-
 .copyright p {
   font-size: 12px;
-  letter-spacing: 4;
+  letter-spacing: 4px;
 }
-
 .rsxSoc {
   /*display: flex;
   justify-content: center;*/
   margin-right: 30px;
 }
-
 .rsxSoc a {
   color: #E0E0E0;
   margin-right: 10px;
 }
-
 .rsxSoc a:hover {
   color: #00A208;
 }
